# akeoott-logging-config

./: README.md  pyproject.toml
akeoot-logging-config/: __init__.py
akeoott_logging_config/: __init__.py  logging_config.py
src/LoggingConfig_Akeoott/: logging_config.py
src/logging_config_Akeoott/: __init__.py
